<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llpdf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#36363A"
    tools:context=".PoratalActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="11dp"
            android:background="#9F9FA5"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="65dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/application"
            android:inputType="textPersonName"
            android:text="@string/application"
            android:textAlignment="center"
            android:textColor="#FA4FFAFA"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="AutoFill" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="10dp" />


        <TextView
            android:id="@+id/textViewFrom"
            android:layout_width="214dp"
            android:layout_height="52dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/from"
            android:textAlignment="center"
            android:textColor="#FA4FFAFA"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0" />

        <EditText
            android:id="@+id/editTextD1"
            android:layout_width="282dp"
            android:layout_height="66dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/d1"
            android:inputType="date"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#F8F3F4"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.676"
            tools:ignore="AutoFill" />

        <TextView
            android:id="@+id/textViewTo"
            android:layout_width="116dp"
            android:layout_height="48dp"
            android:layout_marginStart="145dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/to"
            android:textAlignment="center"
            android:textColor="#FA4FFAFA"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            tools:layout_editor_absoluteY="287dp" />
    <EditText
        android:id="@+id/editTextD2"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/d2"
        android:inputType="date"
        android:textColor="#FDF9FA"
        android:textColorHint="#F8F3F4"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.575"
        tools:ignore="AutoFill" />

        <EditText
            android:id="@+id/wrRoomNo"
            android:layout_width="248dp"
            android:layout_height="62dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/wRoomNo"
            android:inputType="number"
            android:textColor="#FDF9FA"
            android:textColorHint="#F8F3F4"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.435"
            tools:ignore="AutoFill" />
        <Button
            android:id="@+id/buttonShow"
            android:layout_width="237dp"
            android:layout_height="73dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="8dp"
            android:text="@string/show"
            android:textColor="@color/colorAccent"
            android:background="@drawable/custom_btn"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/wName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrRoomNo" />
        <EditText
            android:id="@+id/wName"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/wName"
            android:inputType="textPersonName"
            android:enabled="false"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#F8F3F4"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/wPhoneNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonShow"
            tools:ignore="AutoFill" />
        <EditText
            android:id="@+id/wPhoneNo"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/wPhoneNo"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:enabled="false"
            android:textColorHint="#F8F3F4"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="AutoFill"
            tools:layout_editor_absoluteY="596dp" />

        <Button
        android:id="@+id/proceed"
        android:layout_width="349dp"
        android:layout_height="76dp"
            android:layout_marginTop="10dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
        android:enabled="false"
        android:text="@string/proceed"
        android:textColor="#BE0D0D"
            android:background="@drawable/custom_btn"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    </LinearLayout>
</ScrollView>
