<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDevelopers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#36363A"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#9F9FA5"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:text="@string/abDevelopers"
            android:textAlignment="center"
            android:textColor="#0CF1EA"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="326dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/myone" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0sp"
            android:layout_marginBottom="20dp"
            android:text="@string/devName"
            android:textAlignment="center"
            android:textColor="#F7FFFCFC"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="310dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image"
            android:src="@drawable/jaaneman" />

        <TextView
            android:id="@+id/textViewJaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0sp"
            android:layout_marginBottom="20dp"
            android:text="@string/devName2"
            android:textAlignment="center"
            android:textColor="#F7FCFBFB"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>