<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#36363A"
    tools:context=".Main3Registration">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#9F9FA5"
            app:layout_constraintBottom_toTopOf="@+id/editText5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="12dp"
        android:background="#00131311"
        android:ems="10"
        android:hint="@string/plainText"
        android:inputType="textPersonName"
        android:text="@string/plainText"
        android:textAlignment="center"
        android:textColor="#31FCFC"
        android:textColorHighlight="#00551E1E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
        tools:ignore="AutoFill" />

        <EditText
            android:id="@+id/collgID"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/colleg_Id"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomNum"
            tools:ignore="AutoFill" />

        <EditText
            android:id="@+id/roomNum"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/roomNum"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.391"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNum"
            tools:ignore="AutoFill" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="22dp"
            android:layout_height="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/coolgId"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/coolgId"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.391"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNum"
            tools:ignore="AutoFill" />
        <EditText
            android:id="@+id/year"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/yr"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.391"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNum"
            tools:ignore="AutoFill" />


        <EditText
            android:id="@+id/phoneNum"
            android:layout_width="337dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="21dp"
            android:ems="10"
            android:hint="@string/phoneNum"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/roomNum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            tools:ignore="AutoFill" />


        <EditText
            android:id="@+id/name"
            android:layout_width="337dp"
            android:layout_height="52dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text=""
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/passw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collgID"
            tools:ignore="AutoFill" />

        <EditText
            android:id="@+id/address"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/address"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textSize="22sp"
            tools:ignore="AutoFill"/>

        <EditText
            android:id="@+id/ph1"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textAlignment="center"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="22sp"
            android:hint="@string/ph1"
            android:ems="10"
            android:inputType="phone"
            tools:ignore="AutoFill"/>

        <EditText
            android:id="@+id/ph2"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textAlignment="center"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="22sp"
            android:hint="@string/ph2"
            android:ems="10"
            android:inputType="phone"
            tools:ignore="AutoFill"/>


        <EditText
            android:id="@+id/passw"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/passReg"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#FDF9FA"
            android:textColorHint="#FDF8F9"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:ignore="AutoFill" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="329dp"
            android:layout_height="77dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_btn"
            android:text="@string/register"
            android:textColor="#0C1953"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.979"
            app:layout_constraintStart_toEndOf="@id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passw" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="357dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/textView"
            android:textAlignment="center"
            android:textColor="#BB1603"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.923"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />


    </LinearLayout>
</ScrollView>